# oauth-utils

./: AUTHORS  ChangeLog  Makefile.am  README  TODO  configure.ac  oauth-utils.lsm.in  oauth-utils.spec.in  oauth_utils.lsm.in  oauth_utils.spec.in
debian/: changelog  control  copyright  docs  rules
doc/: example.sh  oauth-utils.7  oauth_utils.1  oauth_utils.7  oauth_utils.texinfo  oauthsign.1  oauthverify.1
src/: Makefile.am  Makefile.in  keyfile.c  oauth_common.c  oauth_common.h  oauthsign.c  oauthverify.c  system.h  xmalloc.c
