SUBDIRS = src

EXTRA_DIST= \
 oauth_utils.lsm.in \
 oauth_utils.spec.in \
 doc/oauth_utils.7 \
 doc/oauthsign.1 \
 doc/example.sh

TESTS=doc/example.sh

#  install the man pages
man_MANS=doc/oauth_utils.7 doc/oauthsign.1

MAINTAINERCLEANFILES = \
 Makefile.in \
 aclocal.m4 \
 compile \
 config.guess \
 config.h.in \
 config.sub \
 configure \
 depcomp \
 install-sh \
 Makefile.in \
 src/Makefile.in \
 INSTALL \
 missing

CLEANFILES = 

