SUBDIRS = src

EXTRA_DIST= \
 oauth-utils.lsm.in \
 oauth-utils.spec.in \
 doc/oauth-utils.7 \
 doc/oauthsign.1 \
 doc/example.sh

TESTS=doc/example.sh

#  install the man pages
man_MANS=doc/oauth-utils.7 doc/oauthsign.1

MAINTAINERCLEANFILES = \
 Makefile.in \
 aclocal.m4 \
 compile \
 config.guess \
 src/config.h.in \
 config.sub \
 configure \
 depcomp \
 install-sh \
 Makefile.in \
 src/Makefile.in \
 INSTALL \
 missing

CLEANFILES = 

